--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>段考成績分析工具</title>
+  <title>測驗成績分析工具</title>
   <style>
     :root{
       --blue-900:#003366;
@@ -58,27 +58,27 @@
   </style>
 </head>
 <body>
-  <h1>段考成績分析工具</h1>
+  <h1>測驗成績分析工具</h1>
 
   <main class="card">
-    <label for="total">段考總分</label>
+    <label for="total">測驗總分 ( 通常為100 )</label>
     <input type="number" id="total" min="0" step="any" />
 
-    <label for="taught">教學覆蓋分數（自動 = 90% × 總分，可調整）</label>
+    <label for="taught">教學覆蓋分數（ 總分 × 90%，可調整 ）</label>
     <input type="number" id="taught" min="0" step="any" />
 
     <div class="row">
       <div>
-        <label for="learned">確實學會的題目分</label>
+        <label for="learned">學習分數(考前已確實學會的題目)</label>
         <input type="number" id="learned" min="0" step="any" />
       </div>
       <div>
-        <label for="scored">實得的題目分</label>
+        <label for="scored">實得分數</label>
         <input type="number" id="scored" min="0" step="any" />
       </div>
     </div>
 
-    <button id="calcBtn">計算</button>
+    <button id="calcBtn">分析</button>
 
     <div class="result" id="result"></div>
   </main>
@@ -108,13 +108,13 @@
   function pct(r){return isFinite(r)?(r*100).toFixed(1)+'%':'—';}
 
   function color(r){
-    if(r>0.93) return 'green';
+    if(r>=0.93) return 'green';
     if(r>=0.84) return 'black';
     return 'red';
   }
 
   function label(r){
-    if(r>0.93) return '（優良）';
+    if(r>=0.93) return '（優良）';
     if(r>=0.84) return '（尚可）';
     return '（待加強）';
   }
@@ -139,11 +139,13 @@
     out+=`<h3>內容學習率</h3><p class="${color(learn)}">${pct(learn)} ${label(learn)}</p>`;
     out+=`<h3>解題執行率</h3><p class="${color(exec)}">${pct(exec)} ${label(exec)}</p>`;
 
-    out+='<h3>改善方式：</h3>';
-
-    out+=`<p><strong>學習率改善：</strong><br>1. 上課保持專注<br>2. 完成筆記與作業<br>3. 每日規劃複習</p>`;
-
-    out+=`<p><strong>執行率改善：</strong><br>1. 加強計算速度與精準度<br>2. 注意考試時間配置<br>3. 保持身心穩定</p>`;
+      out+='<h3>改善方式：</h3>';
+    if(learn<0.93){
+      out+=`<p><strong>學習率不佳：</strong><br>1. 上課保持專注<br>2. 完成筆記與作業<br>3. 每日規劃複習</p>`;
+    }
+    if(exec<0.93){
+      out+=`<p><strong>執行率不佳：</strong><br>1. 加強計算速度與精準度<br>2. 注意考試時間配置<br>3. 保持身心穩定</p>`;
+    }
 
     result.innerHTML=out;
   }
