--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div class="row">
       <div>
-        <label for="learned">學習分數(考前已確實學會的題目)</label>
+        <label for="learned">學習分數(考前已確實學會的題目占分)</label>
         <input type="number" id="learned" min="0" step="any" />
       </div>
       <div>
@@ -141,10 +141,10 @@
 
       out+='<h3>改善方式：</h3>';
     if(learn<0.93){
-      out+=`<p><strong>學習率不佳：</strong><br>1. 上課保持專注<br>2. 完成筆記與作業<br>3. 每日規劃複習</p>`;
+      out+=`<p><strong>學習率不佳：</strong><br>1. 上課保持專注<br>2. 認真完成筆記與作業<br>3. 每日規劃在家複習時間</p>`;
     }
     if(exec<0.93){
-      out+=`<p><strong>執行率不佳：</strong><br>1. 加強計算速度與精準度<br>2. 注意考試時間配置<br>3. 保持身心穩定</p>`;
+      out+=`<p><strong>執行率不佳：</strong><br>1. 加強計算速度與精準度<br>2. 注意考試時間分配<br>3. 保持良好身體健康與心態</p>`;
     }
 
     result.innerHTML=out;
