--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
   <h1>測驗成績分析工具</h1>
 
   <main class="card">
-    <label for="total">測驗總分 ( 通常為100 )</label>
+    <label for="total">總分 ( 通常為100 )</label>
     <input type="number" id="total" min="0" step="any" />
 
-    <label for="taught">教學覆蓋分數（ 總分 × 90%，可調整 ）</label>
+    <label for="taught">教學覆蓋分（ 已教過 ）</label>
     <input type="number" id="taught" min="0" step="any" />
 
     <div class="row">
       <div>
-        <label for="learned">學習分數(考前已確實學會的題目占分)</label>
+        <label for="learned">習得分(已學會)</label>
         <input type="number" id="learned" min="0" step="any" />
       </div>
       <div>
-        <label for="scored">實得分數                     </label>
+        <label for="scored">實得分                     </label>
         <input type="number" id="scored" min="0" step="any" />
       </div>
     </div>
@@ -135,7 +135,7 @@
     const exec=L?S/L:0;
 
     let out='';
-    out+=`<h3>教學準備度</h3><p>${pct(prep)}</p>`;
+    out+=`<h3>教學覆蓋率</h3><p>${pct(prep)}</p>`;
     out+=`<h3>內容學習率</h3><p class="${color(learn)}">${pct(learn)} ${label(learn)}</p>`;
     out+=`<h3>解題執行率</h3><p class="${color(exec)}">${pct(exec)} ${label(exec)}</p>`;
 
