--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     const exec=L?S/L:0;
 
     let out='';
-    out+=`<h3>教學覆蓋率</h3><p class="${color(prep)}>${pct(prep)}</p>`;
+    out+=`<h3>教學覆蓋率</h3><p>${pct(prep)}</p>`;
     out+=`<h3>內容學習率</h3><p class="${color(learn)}">${pct(learn)} ${label(learn)}</p>`;
     out+=`<h3>解題執行率</h3><p class="${color(exec)}">${pct(exec)} ${label(exec)}</p>`;
 
