--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>測驗成績分析工具</title>
+  <title>測驗成績分析</title>
   <style>
     :root{
       --blue-900:#003366;
@@ -58,10 +58,10 @@
   </style>
 </head>
 <body>
-  <h1>測驗成績分析工具</h1>
+  <h1>測驗成績分析</h1>
 
   <main class="card">
-    <label for="total">總分 ( 通常為100 )</label>
+    <label for="total">總分 ( 100 )</label>
     <input type="number" id="total" min="0" step="any" />
 
     <label for="taught">教學覆蓋分（ 已教過 ）</label>
@@ -135,13 +135,13 @@
     const exec=L?S/L:0;
 
     let out = '';
-      out += `<p><span class="black">教學準備度：</span> <span class="${color(prep)}">${pct(prep)} ${label(prep)}</span></p>`;
-      out += `<p><span class="black">內容學習率：</span> <span class="${color(learn)}">${pct(learn)} ${label(learn)}</span></p>`;
+      out += `<p><span class="black">教學覆蓋度：</span> <span class="${color(prep)}">${pct(prep)} ${label(prep)}</span></p>`;
+      out += `<p><span class="black">內容習得率：</span> <span class="${color(learn)}">${pct(learn)} ${label(learn)}</span></p>`;
       out += `<p><span class="black">解題執行率：</span> <span class="${color(exec)}">${pct(exec)} ${label(exec)}</span></p>`;
 
       out+='<h3>改善方式：</h3>';
     if(learn<0.93){
-      out+=`<p><strong>學習率不佳：</strong><br>1. 上課保持專注<br>2. 認真完成筆記與作業<br>3. 每日規劃在家複習時間</p>`;
+      out+=`<p><strong>習得率不佳：</strong><br>1. 上課保持專注<br>2. 認真完成筆記與作業<br>3. 每日規劃在家複習時間</p>`;
     }
     if(exec<0.93){
       out+=`<p><strong>執行率不佳：</strong><br>1. 加強計算速度與精準度<br>2. 注意考試時間分配<br>3. 保持良好身體健康與心態</p>`;
