--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     const exec=L?S/L:0;
 
     let out = '';
-      out += `<p><span class="black">教學覆蓋度：</span> <span class="${color(learn)>${pct(prep)}</span></p>`;
+      out += `<p><span class="black">教學覆蓋度：</span> <span class="black">${pct(prep)}</span></p>`;
       out += `<p><span class="black">內容習得率：</span> <span class="${color(learn)}">${pct(learn)} ${label(learn)}</span></p>`;
       out += `<p><span class="black">解題執行率：</span> <span class="${color(exec)}">${pct(exec)} ${label(exec)}</span></p>`;
 
